--- a/HousePricePredictor.ipynb
+++ b/HousePricePredictor.ipynb
@@ -19,6 +19,17 @@
    "id": "6afc63ab-48c2-482a-95e6-577c130755bd",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"house_prices_dataset.csv\")\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20ae583e-8c2e-4658-b5fd-2bd46cb8e5d1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
