--- a/house_price_linear_regression.ipynb
+++ b/house_price_linear_regression.ipynb
@@ -20,8 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"house_prices.csv\")\n",
-    "df"
+    "df = pd.read_csv(\"Housing_Price_Data.csv\")"
    ]
   },
   {
