Refactor notebook structure by adding introductory markdown cells for clarity

--- a/house_price_linear_regression.ipynb
+++ b/house_price_linear_regression.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "17d4fa0d-5cc2-4d5a-9a72-c69ba56348fc",
+   "metadata": {},
+   "source": [
+    "# House Price Prediction with Linear Regression\n",
+    "\n",
+    "This notebook explores a simple linear regression model to predict house prices based on numerical features. The project focuses on understanding the full machine learning workflow, from data inspection to model evaluation.\n",
+    "\n",
+    "**Goal:** Predict house prices using linear and multiple linear regression  \n",
+    "**Tools:** Python, pandas, scikit-learn, matplotlib\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "095a08d3-de81-4085-9142-d54dcc8fbfa5",
+   "metadata": {},
+   "source": [
+    "## Import Necessary Tools"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e358473b-f69d-4ebc-8fb5-7ecc3f7f81f7",
