--- a/house_price_linear_regression.ipynb
+++ b/house_price_linear_regression.ipynb
@@ -18,7 +18,7 @@
    "id": "095a08d3-de81-4085-9142-d54dcc8fbfa5",
    "metadata": {},
    "source": [
-    "## Import Necessary Tools"
+    "### Import Necessary Tools & Libraries"
    ]
   },
   {
@@ -30,8 +30,17 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn import linear_model"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd197497-1585-4c5c-b6b3-d367ca774f20",
+   "metadata": {},
+   "source": [
+    "### Load the Dataset"
    ]
   },
   {
@@ -42,6 +51,52 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"Housing_Price_Data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33d76da4-7221-479e-bd2c-a314c7136662",
+   "metadata": {},
+   "source": [
+    "### Inspect Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7b9f789-4f87-4c79-81e3-6ff705c345a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54e0752b-c85f-438c-9821-412972cd588f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3301dcc",
+   "metadata": {},
+   "source": [
+    "### Clean & Select Relevant Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d861f7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['price','area']]"
    ]
   },
   {
@@ -57,6 +112,14 @@
     "plt.title('Area vs Price')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e04c8b1-4c75-419a-a500-c3beea03db57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -138,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
