--- a/house_price_linear_regression.ipynb
+++ b/house_price_linear_regression.ipynb
@@ -32,7 +32,8 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error, r2_score"
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -121,26 +122,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c0ba440-4236-4870-9b32-952936a04897",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(df.area, df.price, color='red', marker='+')\n",
-    "plt.xlabel('Area (SQ ft)')\n",
-    "plt.ylabel('Price (USD)')\n",
-    "plt.title('Area vs Price')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "3e04c8b1-4c75-419a-a500-c3beea03db57",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Create The Model"
+   ]
   },
   {
    "cell_type": "code",
@@ -149,8 +136,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg = linear_model.LinearRegression()\n",
-    "reg.fit(df[['area']],df.price)"
+    "model = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a3075ad",
+   "metadata": {},
+   "source": [
+    "### Train the Model (Fit it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3094e59c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "287ea7b0",
+   "metadata": {},
+   "source": [
+    "### Make Predictions"
    ]
   },
   {
@@ -160,64 +172,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.predict(pd.DataFrame({'area': [300]}))"
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cd0b318",
+   "metadata": {},
+   "source": [
+    "### Visualize actual data and regression line"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336da330-8592-4d78-9ed9-e252038f1db2",
+   "id": "1026ee62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.xlabel('Area (SQ ft)')\n",
-    "plt.ylabel('Price (USD)')\n",
-    "plt.scatter(df.area, df.price, color='red', marker='+')\n",
-    "plt.title('Area vs Price')\n",
-    "plt.plot(df.area, reg.predict(df[['area']]), color='blue')\n",
-    "plt.show()"
+    "\n",
+    "\n",
+    "# Scatter plot of actual data (test set)\n",
+    "plt.scatter(X_test, y_test, color='red', label='Actual Prices')\n",
+    "\n",
+    "# Sort X values for a clean regression line\n",
+    "X_line = X_test.sort_values(by='area')\n",
+    "y_line = model.predict(X_line)\n",
+    "\n",
+    "# Plot regression line\n",
+    "plt.plot(X_line, y_line, color='blue', label='Regression Line')\n",
+    "\n",
+    "# Labels & title\n",
+    "plt.xlabel('Area (sq ft)')\n",
+    "plt.ylabel('Price')\n",
+    "plt.title('House Price Prediction with Linear Regression')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2087910b-1a77-4444-a5e7-1bd54467d93b",
+   "id": "947cdc8a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "d = pd.read_csv(\"areas.csv\")\n",
-    "d.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0a054c6-9b4d-4fb7-b015-031110ba6cc5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = reg.predict(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc322431-3969-4731-859a-a7635aa76000",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d['prices'] = p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed30e4de-da62-4d64-bb92-b8a6ced63e75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.to_csv(\"prediction.csv\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
