Create multiple variable regression notebook for house price prediction

--- a/house_price_predictor_single_variable_linear_regression.ipynb
+++ b/house_price_predictor_single_variable_linear_regression.ipynb
@@ -5,11 +5,11 @@
    "id": "17d4fa0d-5cc2-4d5a-9a72-c69ba56348fc",
    "metadata": {},
    "source": [
-    "# House Price Prediction with Linear Regression\n",
+    "# House Price Prediction with Single Variable Linear Regression\n",
     "\n",
-    "This notebook explores a simple linear regression model to predict house prices based on numerical features. The project focuses on understanding the full machine learning workflow, from data inspection to model evaluation.\n",
+    "This notebook explores a simple linear regression model using a single variable as a feature to predict the traget of house prices based on numerical features. The project focuses on understanding the full machine learning workflow, from data inspection to model evaluation.\n",
     "\n",
-    "**Goal:** Predict house prices using linear and multiple linear regression  \n",
+    "**Goal:** Predict house prices using single variable linear regression  \n",
     "**Tools:** Python, pandas, scikit-learn, matplotlib\n"
    ]
   },
