Add general procedure for linear regression

--- a/house_price_predictor_multi_variable_linear_regression.ipynb
+++ b/house_price_predictor_multi_variable_linear_regression.ipynb
@@ -5,7 +5,7 @@
    "id": "60faecc2",
    "metadata": {},
    "source": [
-    "# House Price Prediction with Multi-Variable Linear Regression\n",
+    "# House Price Prediction With a Multiple Variable Linear Regression\n",
     "\n",
     "This notebook explores a simple linear regression model using multiple variables as features to predict the target of house prices based on numerical features. The project focuses on understanding the full machine learning workflow, from data inspection to model evaluation.\n",
     "\n",
@@ -15,9 +15,71 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd641adb",
+   "id": "baaf6fa9",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Import Necessary Tools & Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6c636c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5297a36c",
+   "metadata": {},
+   "source": [
+    "### Load the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ade24902",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"Housing_Price_Data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "802d9594",
+   "metadata": {},
+   "source": [
+    "### Inspect Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3348a735",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faf72825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
@@ -27,7 +89,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.9"
   }
  },
