Fix capitalization in plot labels for consistency

--- a/house_price_predictor_single_variable_linear_regression.ipynb
+++ b/house_price_predictor_single_variable_linear_regression.ipynb
@@ -201,7 +201,7 @@
     "# Plot regression line\n",
     "plt.plot(X_line, y_line, color='blue', label='Regression Line')\n",
     "\n",
-    "# Labels & title\n",
+    "# Labels & Title\n",
     "plt.xlabel('Area (sq ft)')\n",
     "plt.ylabel('Price')\n",
     "plt.title('House Price Prediction with Linear Regression')\n",
